--- a/EvoAngular/src/app/app.component.html
+++ b/EvoAngular/src/app/app.component.html
@@ -1,18 +1,6 @@
-<nav>
-    <ul>
-        <li>
-            <a routerLink="departamentos">Departamentos</a>
-        </li>
-        <li>
-            <a routerLink="funcionarios">Funcionarios</a>
-        </li>
-        <li>
-            <a routerLink="dashboard">Dashboard</a>
-        </li>
-        <li>
-            <a routerLink="perfil">Perfil</a>
-        </li>
-    </ul>
-</nav>
+<app-nav></app-nav>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
