--- a/EvoAngular/src/app/funcionarios/funcionarios.component.html
+++ b/EvoAngular/src/app/funcionarios/funcionarios.component.html
@@ -1,20 +1,58 @@
-<app-titulo [titulo]='titulo'></app-titulo>
-
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Funcionário</th>
-      <th scope="col">RG</th>
-      <th scope="col">Departamento</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let func of funcionarios">
-      <th scope="row">{{func.id}}</th>
-      <td>{{func.nome}}</td>
-      <td>{{func.rg}}</td>
-      <td>{{func.setor}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-sm-6" *ngIf="funcionarioSelecionado">
+    <div class="row">
+      <div class="mr-auto">
+        <app-titulo [titulo]="'Cód: ' + funcionarioSelecionado.id"></app-titulo>
+      </div>
+      <div class="mt-2">
+        <button class="btn btn-sm btn-outline-danger" (click)='voltar()'>Fechar</button>
+      </div>
+    </div>
+    
+    <form [formGroup]='funcionarioForm' (submit)="funcionarioSubmit()">
+      <div class="form-group">
+        <label for="formGroupExampleInput" class="form-label">Nome</label>
+        <input type="text" class="form-control" formControlName= "nome">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">RG</label>
+        <input type="text" class="form-control" formControlName= "rg">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Departamento</label>
+        <input type="text" class="form-control" formControlName= "departamento">
+      </div>
+      <div class="form-group">
+        <hr>        
+        <button class="btn btn-success" [disabled]="!funcionarioForm.valid">Salvar</button>
+      </div>
+    </form>
+  </div>
+  
+  <div [ngClass]="{'col-sm-6': funcionarioSelecionado, 'col-sm-12': !funcionarioSelecionado}">
+    <app-titulo [titulo]="titulo"></app-titulo>
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Funcionário</th>
+          <th scope="col">RG</th>
+          <th scope="col">Departamento</th>
+          <th scope="col">Opções</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let func of funcionarios">
+          <td scope="row">{{func.id}}</td>
+          <td>{{func.nome}}</td>
+          <td>{{func.rg}}</td>
+          <td>{{func.departamento}}</td>
+          <div class="btn-group">
+            <button (click)="funcionarioSelect(func)" class="text-dark btn btn-sm btn-outline-warning">Detalhe</button>            
+            <button class="btn btn-sm btn-outline-danger">Deletar</button>
+          </div>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
