--- a/EvoAngular/src/app/funcionarios/funcionarios.component.html
+++ b/EvoAngular/src/app/funcionarios/funcionarios.component.html
@@ -15,13 +15,21 @@
         <input type="text" class="form-control" formControlName= "nome">
       </div>
       <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Foto</label>
+        <input type="text" class="form-control" formControlName= "foto">
+      </div>
+      <div class="form-group">
         <label for="formGroupExampleInput2" class="form-label">RG</label>
         <input type="text" class="form-control" formControlName= "rg">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput2" class="form-label">Departamento</label>
-        <input type="text" class="form-control" formControlName= "departamento">
+        <label for="formGroupExampleInput2" class="form-label">Departamento Id</label>
+        <input type="text" class="form-control" formControlName= "departamentoId">
       </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Departamento</label>
+        <input type="text" class="form-control" formControlName= "departamento" readonly="true">
+      </div>          
       <div class="form-group">
         <hr>        
         <button class="btn btn-success" [disabled]="!funcionarioForm.valid">Salvar</button>
@@ -38,6 +46,7 @@
           <th scope="col">Funcionário</th>
           <th scope="col">RG</th>
           <th scope="col">Departamento</th>
+          <th scope="col">Departamento Id</th>
           <th scope="col">Opções</th>
         </tr>
       </thead>
@@ -46,7 +55,8 @@
           <td scope="row">{{func.id}}</td>
           <td>{{func.nome}}</td>
           <td>{{func.rg}}</td>
-          <td>{{func.departamento}}</td>
+          <td>{{func.departamento.nome}}</td>
+          <td>{{func.departamentoId}}</td>
           <div class="btn-group">
             <button (click)="funcionarioSelect(func)" class="text-dark btn btn-sm btn-outline-warning">Detalhe</button>            
             <button class="btn btn-sm btn-outline-danger">Deletar</button>
