--- a/EvoAngular/src/app/titulo/titulo.component.html
+++ b/EvoAngular/src/app/titulo/titulo.component.html
@@ -1,3 +1,13 @@
-<h3>
-  {{titulo}}
-</h3>
+<div class="container">
+  <div class="row">
+    <div class="mr-auto">
+      <h3>
+        {{titulo}}
+      </h3>  
+    </div>
+    <div class="mt-2">
+      <ng-content></ng-content>
+    </div>
+  </div>
+</div>
+
