--- a/EvoAngular/src/app/departamentos/departamentos.component.html
+++ b/EvoAngular/src/app/departamentos/departamentos.component.html
@@ -16,7 +16,7 @@
       <button class="btn btn-success" [disabled]="!departamentoForm.valid">Salvar</button>
     </form>
   </div>
-
+  
   <div [ngClass]="{'col-sm-6': departamentoSelecionado, 'col-sm-12': !departamentoSelecionado}">
     <app-titulo [titulo]="titulo">
       <button class="btn btn-sm btn-success" (click)='departamentoNovo()'>Cadastrar Departamento</button>
@@ -38,9 +38,8 @@
           <td>
             <div class="btn-group">
               <button (click)="departamentoSelect(dep)" class="text-dark btn btn-sm btn-outline-warning">Detalhe</button>&nbsp;
-              <button class="btn btn-sm btn-outline-primary" (click)='openModal(template)'>Funcionários</button>&nbsp;
-              <button (click)='carregar(dep)' class="btn btn-sm btn-outline-primary">Carregar</button>&nbsp;
-              <button (click) ='deletarDepartamento(dep.id)' class="btn btn-sm btn-outline-danger">Deletar</button>&nbsp;
+              <button (click)="openModal(template, dep.id)" class="btn btn-sm btn-outline-primary">Funcionários</button>&nbsp;              
+              <button (click) ="deletarDepartamento(dep.id)" class="btn btn-sm btn-outline-danger">Deletar</button>
             </div>
           </td>
         </tr>
@@ -49,13 +48,16 @@
   </div>
 </div>
 
-<ng-template #template>  
-  <div class="modal-body">    
-    <app-funcionarios></app-funcionarios>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn pull-right" aria-label="Close" (click)="modalRef.hide()">
-      FECHAR      
-    </button>
-  </div>
+<ng-template #template>
+  <div class="modal-content" style="width: 50vw;">
+    <div class="modal-body">    
+      <app-departamento-funcionarios [funcionarios] ="funcionariosDep"></app-departamento-funcionarios>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn pull-right" aria-label="Close" (click)="modalRef.hide()">
+        FECHAR      
+      </button>
+    </div>
+  </div>  
+  
 </ng-template>
