--- a/EvoAngular/src/app/funcionarios/funcionarios.component.html
+++ b/EvoAngular/src/app/funcionarios/funcionarios.component.html
@@ -22,10 +22,6 @@
         <input type="number" class="form-control" formControlName= "departamentoId">
       </div>
       <div class="form-group">
-        <label for="formGroupExampleInput2" class="form-label">Departamento</label>
-        <input type="text" class="form-control" formControlName= "departamento" readonly="true">
-      </div>          
-      <div class="form-group">
         <hr>        
         <button class="btn btn-success" [disabled]="!funcionarioForm.valid">Salvar</button>
       </div>
@@ -41,6 +37,7 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Funcionário</th>
+          <th scope="col">Foto</th>
           <th scope="col">RG</th>
           <th scope="col">Departamento</th>
           <th scope="col">Departamento Id</th>
@@ -51,6 +48,7 @@
         <tr *ngFor="let func of funcionarios">
           <td scope="row">{{func.id}}</td>
           <td>{{func.nome}}</td>
+          <td><img src="{{func.foto}}" style="max-width: 50px;"></td>
           <td>{{func.rg}}</td>
           <td>{{func.departamento.nome}}</td>
           <td>{{func.departamentoId}}</td>
